modernize git repo

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
       <div class="color one"><h3><a href="../">HOME</a></h3></div>
       <div class="active"><h3><a href="">ABOUT US</a></h3></div>
       <div class="color one"><h3><a href="../register-to-vote/">REGISTER TO VOTE</a></h3></div>
-      <div class="color one"><h3><a href="../2020-general/">2020 GENERAL</a></h3></div>
+      <div class="color one"><h3><a href="../2021-general/">2021 LOCAL ELECTIONS</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
 </div>
@@ -28,12 +28,12 @@
           </div>
           <div class='imagespan'>
             <div>
-              <img class="bodyimage" src="../images/election-day-group-bigcrop.jpeg" alt=""/>
+              <img class="bodyimage" src="../images/mitvote_zoom.jpg" alt=""/>
             </div>
           </div>
             <div class="text-box left">
-              <h4>MITvote is a nonpartisan group of graduates and undergraduates with the goal of engaging an active voter community on campus. Our mission is to make voting as accessible as possible to everyone and encourage civic participation on MIT's campus.</h4>
-                <p>We organize voter registration drives, hold absentee ballots events, provide information on how to vote to students, and connect students with voter resources. We work to raise awareness of upcoming elections and educate students on how to participate in the civic process. We participate in activism surrounding voter issues and support legislation like same-day voter registration, expanding early voting, and non-citizen voting in municipal elections.</p>
+              <h4>MITvote is a nonpartisan group of graduates and undergraduates with the goal of engaging an active voter community on campus. Our mission is to make voting as accessible as possible for everyone and encourage civic participation on MIT's campus.</h4>
+                <p>We organize voter registration drives, hold absentee ballots events, provide information on how to vote to students, and connect students with voter resources. We work to raise awareness of upcoming elections and educate students on how to participate in the civic process. We also participate in activism surrounding voter issues and support legislation like same-day voter registration, expanding early voting, and expaning mail-in voting.</p>
               </div>
             <div class='imagespan'>
               <div>
@@ -42,29 +42,24 @@
             </div>
             <div class="text-box left">
               <h2>Current Projects</h2>
-                <h4>Virtual Student Engagement</h4>
-                <p>Because of COVID-19, many of our usual tactics for student engagement are no longer possible. MITvote has been working to come up with the most effective plan to reach students virtually. We have been co-hosting office hours with various groups on campus to virtually provide face-to-face voter assistance. We have also created a voting questions form in collaboration with the UA so students can reach us via email with voting questions. Lastly, we are planning to reach out to every student individually via email about their voting plan.</p>
-                <h4>Virtual Events</h4>
-                <p>MITvote is holding an event titled <b>The Impact of Your Vote: How your vote up and down the ballot affects the issues you care about</b> on <b>October 14th at 6:30pm.</b> We know the presidential race can be discouraging, and we are planning to talk about the ways your vote is impactful up and down the ballot. The event will feature two panelists; Charles Stewart from MIT course 17 and co-founder of the Healthy Elections Project and Bina Venkataramaan, editor for the Boston Globe and climate policy expert who worked in the Obama white house. Join us using Eventbrite - link <a href='https://www.eventbrite.com/e/the-impact-of-your-vote-tickets-123946482265'>HERE</a>.</p>
-                <p>MITvote has also been collaborating with the UA and a variety of cultural groups on campus to put on <b>Get Out the Vote Festival</b> on <b>Sunday, October 11th.</b> The event will feature headliners and artists like Yo-Yo Ma and Bren Joy, and there will be voter registration help and voter education materials on site. There will also be chances to speak to civic engagement organizations. The event is open to all Boston-area college students. More information on <a href='https://www.facebook.com/events/1090104901418376/'>Facebook</a>.</p>
-                <h4>Reaching First Years</h4>
-                <p>MITvote has been working in the last year to engage first years in particular. We feel that if we show first years the importance that the institute places on civic engagement, voting will become a habit. We have been working with the Office of the First Year to make voter registration a part of official Orientation, as well as brainstorming other ways to reach first year students.</p>
-                <h4>Getting Faculty Involved</h4>
-                <p>We have been working to get faculty involved in encouraging students to vote. Faculty can act as another indicator of the importance the institute places on civic engagement as well as a reminder to vote in the academic sphere of student life</p>
-                <h4>Liaison Program</h4>
-                <p>MITvote has found that the most effective way to engage with students is through their peers. It is one thing for students to walk by our table, but it is another for a friend to ask, "Hey, are you planning to vote?". Thus, MITvote has been working to recruit students in each grad department and as many living communities and student groups as possible to act as a resource and reminder to their peers. For graduate students, we focus on each department. For undergrads, we focus mostly on living communities. We have been working with GRA's to act as liaisons to undergraduate living communities.</p>
+                <p>MITvote will primarily be focused on city elections in Cambridge and Boston this year. We are currently planning for the 2021 Election season. As in previous years, we are planning to table in Lobby 10, table at the MIT flu shot clinic, hold vote-by-mail events, hold a local elections panel, and hold an Election Day event.</p>
+                <h4>ALL IN Challenge</h4>
+                <p>In Fall of 2020, MIT joined the nationwide <a href="https://allinchallenge.org/" target="_blank">ALL IN Challenge</a>. We are currently working with faculty and staff from around the institute to make voter turnout efforts a solidified and automatic part of life at MIT.</p>
                 <h4>Guest Blogging for the PKG Center</h4>
-                <p>Since the spring, MITvote has been guest blogging for the PKG Center. You can find all of our posts on the PKG Center blog <a href="https://pkgcenter.mit.edu/blog/">HERE!</a></p>
+                <p>Since the spring, MITvote has been guest blogging for the PKG Center. You can find all of our posts on the PKG Center blog <a href="https://pkgcenter.mit.edu/blog/" target="_blank">HERE!</a></p>
                 <h4>BostonVotes - collaboration with other Boston-area schools</h4>
                 <p>Last fall, MITvote joined a coalition of groups like us at other Boston-area schools. This coalition allows us to share ideas and resources between groups to advance the larger goal of student voter turnout. We work with them to advance common goals and demands for institutional support and voter turnout goals.</p>
-              <h2>Reflections on 2019</h2>
-                <p>After the 2019 election season, MITvote wrote a report detailing our activities in 2019, similar to our 2018 report. We found that while turnout decreased in most precincts in Cambridge, turnout increased in MIT precincts. Read the entire report <a href=https://drive.google.com/file/d/1en5MxnLRuvF0BU5yfMT_Ai2e8sGg5yPU/view?usp=sharing>HERE.</a></p>
-              <h2>Reflections on 2018</h2>
-                  <p>After the 2018 election season, MITvote wrote a report detailing our actions leading up the election and our success. We found <strong>196% increase</strong> in voter turnout on campus in the 2018 midterm elections over the 2014 midterm elections. If you would like to learn more about what MITvote has done in the past, what worked, what didn't and how voter registration and turnout changed in 2018, check out that report <a href=https://drive.google.com/file/d/19tNFgs75q9pwYHZnvZpXlsqEInxK8CIG/view?usp=sharing/> HERE!</a><p>
-                  <p>Email <a href='mailto:vote-exec@mit.edu'>vote-exec@mit.edu</a> if you have any questions!</p>
+              <h2>Reflections on Past Election Seasons</h2>
+                <p>Each year, MITvote authors a report detailing our activities leading up to the election and our success. Though turnout data is not yet available for 2020, data shows we reached more students and engaged with more of the MIT community than ever before in 2020. In the report, we discuss what we did differently this year, what worked well, what was less successful, and lessons we will carry forward for the future. Read the entire report <a href=2020_success_report.pdf target="_blank">HERE</a></p>
+                <p>You can find our past reports below.</p>
+                <ul>
+                  <li><a href="https://drive.google.com/file/d/1dg5EZU85ismesqOoeqpj9n-Bu9XU9zYX/view?usp=sharing" target="_blank">2019</a></li>
+                  <li><a href="https://drive.google.com/file/d/19tNFgs75q9pwYHZnvZpXlsqEInxK8CIG/view?usp=sharing" target="_blank">2018</a></li>
+                </ul>
+                <p>Email <a href='mailto:vote-exec@mit.edu'>vote-exec@mit.edu</a> if you have any questions!</p>
               <h2>Join Us!</h2>
-                  <p>MITvote needs people in all levels of commitment and involvement. We would love to have more regular attendees to help us plan and run events, poster, create voter materials, and help with administrative tasks. We are also currently recruiting students to act as liaisons to their communities. This role would include encouraing and reminding your peers to register and vote, as well as providing and the necessary forms and answering any questions they have. Lastly, we also need a healthy list of volunteers for staffing registration drives and events, which is more of a sign up as you can basis.</p>
-                  <p>If you are interested in helping out, please email us at <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a>, and we can tell you more about us. Being a regular member of MITvote generally requires about 1-2 hours a week of commitment. If you are interested in volunteering but you don't want the regular time commitment, please add yourself to our mailing list (mitvote-all@mit.edu) to receive emails with club info and volunteer opportunities. Thank you so much for your interest!</p>
+                  <p>MITvote needs people in all levels of commitment and involvement. We would love to have more regular attendees to help us plan and run events, run social media, poster, create voter materials, and brainstorm new ways to reach students. We also need a healthy list of volunteers for staffing registration drives and events, which is more of a sign up as you can basis.</p>
+                  <p>If you are interested in helping out, please email us at <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a>, and we can tell you more about us! We can also add you to our Slack, which requires no commitment, but allows you to get MITvote announcements and stay in touch with the group.</p>
           </section>
       </div>
     </div>
