--- a/activism/index.html
+++ b/activism/index.html
@@ -15,7 +15,7 @@
       <div class="color one"><h3><a href="../">HOME</a></h3></div>
       <div class="color one"><h3><a href="../about/">ABOUT US</a></h3></div>
       <div class="color one"><h3><a href="../register-to-vote/">REGISTER TO VOTE</a></h3></div>
-      <div class="color one"><h3><a href="../2020-general/">2020 GENERAL</a></h3></div>
+      <div class="color one"><h3><a href="../2021-general/">2021 LOCAL ELECTIONS</a></h3></div>
       <div class="active"><h3><a href="">ACTIVISM</a></h3></div>
     </div>
 </div>
@@ -33,9 +33,9 @@
           </div>
             <div class="text-box left">
               <p>MITvote is a <strong>non-partisan</strong> organization that works to increase access to the ballot box for everyone.</p>
-                <p>In working to fulfill that mission statement, we support legislation that helps make those goals a reality. We have recently been working closely with the GSC to write statements in support of legislation that expands early voting, allows for same-day voter registration, and allows for non-citizen voting in municipal elections. We have also visited the Massachusetts Statehouse to meet with legislators and attend hearings concerning this legislation.</p>
+                <p>In working to fulfill that mission statement, we support legislation that helps make those goals a reality. We have recently been working closely with the GSC to write statements in support of legislation that expands early voting, allows for same-day voter registration, and expands vote-by-mail. We have visited the Massachusetts Statehouse to meet with legislators and attend hearings concerning this legislation and signed letters and statements written by other groups in support of this kind of legislation. In Spring of 2021, we piloted an effort to expand our activism to other states outside of Massachusetts to push back against restrictive voter legislation emerging in statehouses around the country.</p>
                 <p>Though MITvote does participate in some activism, we work hard to remain non-partisan. We support this legislation simply because it works toward the goal of making voting more accessible to everyone, and we reject any partisan ties such legislation might hold. Whenever we work to help people vote or give people information about voting, we always stive to do so in the most non-partisan and non-biased way possible, again because we believe everyone should be able to vote regardless of what political beliefs they hold.</p>
-                <p>Check out our facebook page for more information on our recent activities!</p>
+                <p>Check out our Instagram and Facebook page for more information on our recent activities!</p>
               </div>
           </section>
 </div>
