--- a/questions/index.html
+++ b/questions/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-	<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSdYUQwM9_WcuLZxaBVWHfcy3TKGEzJZNiErjFP3t3UMFZxqZQ/viewform'" />
+	<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSd7HpPMDVh7DfK9E-Hu12FXgexWodtWWVvwEuC660785hArxg/viewform?usp=sf_link'" />
 </html>
