--- a/register-to-vote/index.html
+++ b/register-to-vote/index.html
@@ -15,7 +15,7 @@
       <div class="color one"><h3><a href="../">HOME</a></h3></div>
       <div class="color one"><h3><a href="../about/">ABOUT US</a></h3></div>
       <div class="active"><h3><a href="">REGISTER TO VOTE</a></h3></div>
-      <div class="color one"><h3><a href="../2020-general/">2020 GENERAL</a></h3></div>
+      <div class="color one"><h3><a href="../2021-general/">2021 LOCAL ELECTIONS</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
 </div>
@@ -26,7 +26,7 @@
             <div class="text-box left">
           <h1>Register to Vote!</h1>
               <h2>Register in Massachusetts</h2>
-                <p>If you are not an MIT student or you would rather not use TurboVote, you can register to vote in Massachusetts using the MA Online Voter Registration System. Note that if you do not have a Massachusetts state ID, <b>you can still register in MA,</b> but you will be redirected to a mail in form to fill out. See <a href="MAPaperVoterRegistrationFormKeySteps.pdf" target="_blank">this document</a> to make sure you don't miss key steps! You will need to print this form and mail it or email it in. Please either mail in the form yourself, or see an MITvote representative. If you need an evelope and a stamp, please contact us at <a href="mailto:stampsquad@mit.edu">stampsquad@mit.edu</a> at any time!</p> 
+                <p>If you are not an MIT student or you would rather not use TurboVote, you can register to vote in Massachusetts using the MA Online Voter Registration System. Note that if you do not have a Massachusetts state ID, <b>you can still register in MA,</b> but you will be redirected to a mail in form to fill out. See <a href="MAPaperVoterRegistrationFormKeySteps.pdf" target="_blank">this document</a> to make sure you don't miss key steps! You will need to print this form and mail it or email it in. Please either mail in the form yourself, drop the form off at an MIT Library, or see an MITvote representative. If you need an evelope and a stamp, please contact us at <a href="mailto:stampsquad@mit.edu">stampsquad@mit.edu</a> at any time!</p> 
                   <div class="text-box small">
                 <button class="flatboi color one" onclick="window.open('https://www.sec.state.ma.us/ovr/','_blank')">REGISTER</button>
               </div>
