update to homepage

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <section>
             <div class="text-box left">
               <h1>MITvote</h1>
-              <p>A non-partisan student organization at MIT, MITvote is currently working to increase voter turnout and student engagement in the 2021 local elections. This includes the Cambridge City Council and School Committee, the Boston City Council and Mayor, and other local elections around the country.</p>
-              <h1 style="text-align: center">Election Day is Tuesday, November 2nd, 2021!</h1>
+              <p>A non-partisan student organization at MIT, MITvote is currently working to increase voter turnout and student engagement in the 2022 midterm elections.</p>
+              <h1 style="text-align: center">Election Day is Tuesday, November 8th, 2022!</h1>
             </div>
             <div>
               <span class="image object">
