edits for 2022 midterm elections

--- a/register-to-vote/index.html
+++ b/register-to-vote/index.html
@@ -15,7 +15,7 @@
       <div class="color one"><h3><a href="../">HOME</a></h3></div>
       <div class="color one"><h3><a href="../about/">ABOUT US</a></h3></div>
       <div class="active"><h3><a href="">REGISTER TO VOTE</a></h3></div>
-      <div class="color one"><h3><a href="../2021-general/">2021 LOCAL ELECTIONS</a></h3></div>
+      <div class="color one"><h3><a href="../2022-midterms/">2022 MIDTERM ELECTIONS</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
 </div>
@@ -38,7 +38,7 @@
                     <button class="flatboi color one" onclick="window.open('https://www.vote411.org/select-state')">VOTING GUIDE BY STATE</button>
                   </div>
               <h2>Other Options</h2>
-                  <p>Otherwise, you can always Google "register to vote" + your state to find voter registration information. If you would like any help with the voter registration process, find an MITvote liaison in your living group or department, or feel free to email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with questions any time.</p>
+                  <p>Otherwise, you can always Google "register to vote" + your state to find voter registration information. If you would like any help with the voter registration process, find an MITvote liaison in your living group or department, fill out the form at <a href="https://vote.mit.edu/questions">vote.mit.edu/questions</a>, or feel free to email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with questions any time.</p>
           </section>
 </div>
 </div>
