--- a/ofy/index.html
+++ b/ofy/index.html
@@ -15,7 +15,7 @@
       <div class="color one"><h3><a href="../">HOME</a></h3></div>
       <div class="color one"><h3><a href="../about/">ABOUT US</a></h3></div>
       <div class="color one"><h3><a href="../register-to-vote/">REGISTER TO VOTE</a></h3></div>
-      <div class="color one"><h3><a href="../2021-general/">2021 LOCAL ELECTIONS</a></h3></div>
+      <div class="color one"><h3><a href="../2022-midterms/">2022 MIDTERM ELECTIONS</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
 </div>
