--- a/2022-midterms/index.html
+++ b/2022-midterms/index.html
@@ -38,7 +38,7 @@
                   <li>Early voting - October 22nd to November 4th</li>
                 </ul>
                 <h4>Vote by Mail</h4>
-                  <p>Anyone can vote by mail with no excuse in Massachusetts. In order to do so, you must request a ballot by <b>5pm on November 1st</b>. You can request your ballot using the online portal <a href="https://www.sec.state.ma.us/MailInRequestWeb/MailInBallot.aspx">HERE</a></p>
+                  <p>Anyone can vote by mail with no excuse in Massachusetts. In order to do so, you must request a ballot by <b>5pm on November 1st</b>. You can request your ballot using the online portal <a href="https://www.sec.state.ma.us/MailInRequestWeb/MailInBallot.aspx">HERE</a>.</p>
                   <p>You must then return your ballot by <b>8pm on Election Day. Leave time for your ballot to travel back by mail!</b> We recommend mailing your ballot 1 week before Election Day in order to allow enough time. You can also bring your mail-in ballot to a polling place on Election Day if you do not get it in the mail in time.</p>
                 <h4>Early Voting</h4>
                   <p>Early voting will take place from October 22nd to November 4th. Times and locations are not yet posted at the time of this updating (September 2nd). You can find more information about early voting in Cambridge <a href="https://www.cambridgema.gov/Departments/electioncommission/earlyvoting/earlyvotinginperson">HERE</a>.</p>
