join us! call on the home page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
               <button class="flatboi color one" onclick="window.location.assign('questions/')">PERSONALIZED VOTING HELP</button>
             </div>
           </section>
+          <section>
+            <h2>Join Us!</h2>
+            <p>MITvote is actively seeking volunteers for the 2022 Election season! We need help to run registration drives, answer people's questions, run social media accounts, plan events, and much more. We would love to have your help whether it's a weekly commitment or simply sending a couple template emails every so often. If you are passionate about civic engagement, want to be more involved in government and politics, or simply wish more young people turned out to vote, please consider joining us!</p>
+            <p>MITvote will have a call-out meeting soon! (TBD) In the meantime, please email us at <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> to get involved.</p>
+          </section>
           <!-- <section>
           <div class="text-box left">
             <h2>Impact of Your Vote</h2>
