join us! call on the home page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="text-box left">
               <h1>MITvote</h1>
               <p>A non-partisan student organization at MIT, MITvote is currently working to increase voter turnout and student engagement in the 2022 midterm elections.</p>
+              <p><b>We are actively seeking new members!</b> Scroll down to find more information on how you can help out.</p>
               <h1 style="text-align: center">Election Day is Tuesday, November 8th, 2022!</h1>
             </div>
             <div>
