update about us page

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="text-box left">
               <h2>Current Projects</h2>
-                <p>MITvote will primarily be focused on city elections in Cambridge and Boston this year. We are currently planning for the 2021 Election season. As in previous years, we are planning to table in Lobby 10, table at the MIT flu shot clinic, hold vote-by-mail events, hold a local elections panel, and hold an Election Day event.</p>
+                <p>We are currently planning for the 2022 Election season. As in previous years, we are planning to table in Lobby 10, table at the MIT flu shot clinic, hold vote-by-mail events, hold a voter education panel, and hold an Election Day event.</p>
                 <h4>ALL IN Challenge</h4>
                 <p>In Fall of 2020, MIT joined the nationwide <a href="https://allinchallenge.org/" target="_blank">ALL IN Challenge</a>. We are currently working with faculty and staff from around the institute to make voter turnout efforts a solidified and automatic part of life at MIT.</p>
                 <h4>Guest Blogging for the PKG Center</h4>
