--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
           </section>
           <section>
             <div class="text-box left">
+              <h2>Come talk to us!</h2>
+              <p>MITvote will be tabling in the Stud every Thursday from 12:30-1:30. Come find us to get help with any of your voting needs! We can help you register, help you request an absentee ballot, provide an envelope and a stamp, help you find your polling place, and more!</p>
+            </div>
+          </section>
+          <section>
+            <div class="text-box left">
               <h2>Join Us!</h2>
               <p>MITvote is actively seeking volunteers for the 2022 Election season! We need help to run registration drives, answer people's questions, run social media accounts, plan events, and much more. We would love to have your help whether it's a weekly commitment or simply sending a couple template emails every so often. If you are passionate about civic engagement, want to be more involved in government and politics, or simply wish more young people turned out to vote, please consider joining us!</p>
               <p>MITvote will have a call-out meeting soon! (TBD) In the meantime, please email us at <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> to get involved.</p>
