--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
             </div>
           </section>
           <section>
+          <div class="text-box left">
+            <h2>The Future of Democracy Panel</h2>
+            <!-- <center><iframe width="560" height="315" src="https://www.youtube.com/embed/yzZTF-c-7Sw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center> -->
+            <p>Unsure about whether to vote in the 2022 election? Our panelists argue voting this year is important for democracy itself!</p>
+            <p>With election denialism on the rise and many state and local offices on the ballot, it is important that we vote in people willing to protect our democratic institutions. Watch the full panel <a href="https://web.mit.edu/webcast/mitvote/f22/">HERE</a> for discussion of the importance of the 2022 elections in the current moment, election security, polarization, and more!</p>
+          </div>
+          </section>
+          <section>
             <div class="text-box left">
               <h2>Come talk to us!</h2>
               <p>MITvote will be tabling in the Stud every Thursday from 12:30-1:30. Come find us to get help with any of your voting needs! We can help you register, help you request an absentee ballot, provide an envelope and a stamp, help you find your polling place, and more!</p>
@@ -55,22 +63,7 @@
               <p>MITvote will have a call-out meeting soon! (TBD) In the meantime, please email us at <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> to get involved.</p>
             </div>
           </section>
-          <!-- <section>
-          <div class="text-box left">
-            <h2>Impact of Your Vote</h2>
-            <center><iframe width="560" height="315" src="https://www.youtube.com/embed/yzZTF-c-7Sw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-            <p>Unsure about whether to vote in the 2020 election, or if your vote really matters? (Spoiler: it does!).</p>
-            <p>Listen to our panel "The Impact of Your Vote: How your vote up and down the ballot affects the issues you care about" to learn from panelists about how your vote in races beyond the presidency has an impact on issues like climate change, racial justice and more!</p>
-            <p>We heard from: 
-              <ul>
-                <li>Bina Venkataramaan who teaches in STS at MIT and is the editor of Boston Globe's editorial page as well as a former climate policy expert in the Obama White House.</li>
-                <li>Jared Evans, policy counsel at the NAACP Legal Defense Fund</li>
-                <li>MIT's own Charles Stewart, professor in Course 17, director of the CalTech/MIT Voting Technology Project and co-founder of the Stanford-MIT Healthy Elections Project</li>
-              </ul>
-              The panel was moderated by David Goldston, director of the MIT Washington Office.
-            </p>
-            <p>You can find small, targeted clips of the panel on the MITvote YouTube channel found <a href="https://www.youtube.com/channel/UCF9VMjdB3Rwaar14oZoRkEA/">HERE</a>.</p>
-          </section> -->
+          
         </div>
       </div>
 <div class="footer">
