--- a/questions/index.html
+++ b/questions/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-	<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSd7HpPMDVh7DfK9E-Hu12FXgexWodtWWVvwEuC660785hArxg/viewform?usp=sf_link'" />
+	<meta http-equiv="Refresh" content="0; url='https://l.messenger.com/l.php?u=https%3A%2F%2Fmit.co1.qualtrics.com%2Fjfe%2Fform%2FSV_0PbmxaWS2aKPnKK&h=AT3jZaL_uS9K5E_ckPTpJl-ppKBHLRYs9TF9L2hfxLrJSYBdv-nZVImiYlKvXIj8aEMhu2UPYFDmUC6h_S1fC-RFoEZGNazk0IBgZTlfSgCyqyLIOg7NZmtzHXU4mU4H_m_aQw'" />
 </html>
